# python-colors

./: README.md  setup.cfg
src/colors/: __init__.py
