[metadata]
# replace with your username:
name = python-colors-linux
version = 0.1
author = Patan Musthakheem
author_email = patanmusthakheem786@gmail.com
description = Python-Colors For Using To Beautify Your Output With Just Including It As A Simple Variable
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmk456/python-colors
project_urls =
    Bug Tracker = https://github.com/pmk456/python-colors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
